--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -6,11 +6,21 @@
     --light-placeholder:#6E829F;
     --white-text:#FFFFFF;
   }
+  @font-face {
+    font-family: "Nexa-Black";
+    src: url("../fonts/Nexa-Black.ttf") format("truetype"), url("../fonts/my-font.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+  .black-text{
+    color: black;
+  }
 p{
     font-size: 16px;
 }
 body{
-    background-color: #e9f2ef;
+    background-color: #E3E6E5;
 }
 a{
     color: black;
@@ -209,11 +219,14 @@ a{
 
     /* Style the custom file upload button */
     .custom-file-upload {
+        color: white;
+        width: 100%;
+        max-width: 200px;
+        background-color: #4ECB71;
+        border: none;
         display: inline-block;
-        padding: 10px 20px;
         font-size: 16px;
-        border: 1px solid black;
-        border-radius: 5px;
+        border-radius: 10px;
         cursor: pointer;
         text-align: center;
     }
@@ -222,21 +235,13 @@ a{
         background-color: rgb(208, 242, 220);
     }
 
-    /* Style the submit button */
-    .submit-button {
-        max-width: 250px;
-        width: 100%;
-        display: inline-block;
-        padding: 10px 20px;
-        font-size: 16px;
-        color: black;
-        border: 1px solid black;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-    .submit-button:hover{
-        background-color: rgb(208, 242, 220);
-    }
+   .picture-btn{
+    color: white;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 200px;
+    background-color: #4ECB71;
+   }
 
     .image-preview{
       width: 200px; 
@@ -244,8 +249,10 @@ a{
       object-fit: cover;
     }
     .camera-preview{
-        width: 200px; 
-        height: 200px;
+        max-width: 450px;
+        width: 100%; 
+        height: 100%;
+        max-height: 300px;
         object-fit: cover;
       }
 
@@ -286,3 +293,42 @@ a{
     height: 300px; /* Fixed height */
     position: relative; /* Ensure the canvas fits within the container */
   }
+
+  /* SIDEBAR */
+  #sidebar-wrapper {
+    min-height: 100vh;
+    margin-left: -15rem;
+    transition: margin 0.25s ease-out;
+}
+
+#sidebar-wrapper .sidebar-heading {
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
+}
+
+#sidebar-wrapper .list-group {
+    width: 15rem;
+}
+
+#page-content-wrapper {
+    min-width: 100vw;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    margin-left: 0;
+}
+
+@media (min-width: 768px) {
+    #sidebar-wrapper {
+        margin-left: 0;
+    }
+
+    #page-content-wrapper {
+        min-width: 0;
+        width: 100%;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        margin-left: -15rem;
+    }
+}
