--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -52,7 +52,7 @@ a{
     position: relative;
 }s
 
-.received {
+.received {    
     font-size: 13px;
     background-color: #ffffff;
     align-self: flex-start;
@@ -72,7 +72,7 @@ a{
 }
 
 .received .timestamp {
-    right: 10px;
+    left: 10px;
 }
 
 .sent .timestamp {
@@ -206,6 +206,9 @@ a{
     padding: 8px 8px 8px 25px;
     
 }
+.active-class-green {
+    filter: invert(50%) sepia(10%) saturate(170%) hue-rotate(90deg);
+}
 .side-nav-item.addActive {
     background-color: white;
     border-radius: 20px;
@@ -332,3 +335,23 @@ a{
         margin-left: -15rem;
     }
 }
+
+
+/* CHATBOT  AI*/
+
+.received-response{
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #ebedec;
+}
+
+
+/* SCROLL HIDDEN */
+.hidden-scroll{
+    overflow: scroll;
+    scrollbar-width: none;
+}
+
+.scrollable-container::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Edge */
+  }
