--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,5 +1,9 @@
-<h1>Post by <%= post.userId.firstname %> <%= post.userId.lastname %></h1>
+<h1><%= post.title %></h1> <!-- Displaying the post title -->
 <p><%= post.content %></p>
+
+<% if (post.image) { %>
+  <img src="/<%= post.image %>" alt="Post Image" style="max-width: 500px;">
+<% } %>
 
 <h2>Comments</h2>
 <% comments.forEach(comment => { %>
@@ -10,7 +14,6 @@
   <hr>
 <% }) %>
 
-<!-- Form to add a comment -->
 <h3>Add a Comment</h3>
 <form action="/comment/<%= post._id %>" method="POST">
   <textarea name="comment" placeholder="Write your comment here..." required></textarea>
