--- a/views/partials/UserHeader.ejs
+++ b/views/partials/UserHeader.ejs
@@ -29,7 +29,7 @@
             <div class="list-group list-group-flush d-grid gap-3 mt-4">
                 <a href="/dashboard" class="side-nav-item text-white"> <img src="/images/Dashboard-nav.svg" alt="">  Dashboard</a>
                 <a href="/plant-identification" class="side-nav-item text-white"><img src="/images/scan-helper.svg" alt="">  Plant Scanner</a>
-                <a href="/community" class="side-nav-item text-white"> <img src="/images/account-group.svg" alt="">  Community</a>
+                <a href="/posts" class="side-nav-item text-white"> <img src="/images/account-group.svg" alt="">  Community</a>
                 <a href="/email" class="side-nav-item text-white"> <img src="/images/email-outline.svg" alt="">  Email</a>
                 <a href="/logout" class="side-nav-item text-white"><img src="/images/logout.svg" alt=""> Logout</a>
             </div>
