fix posts title

--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -7,7 +7,7 @@
 
 <% posts.forEach(post => { %>
   <div>
-    <p><strong><%= post.userId.firstname %> <%= post.userId.lastname %>:</strong> <%= post.content %></p>
+    <p><strong><%= post.userId.firstname %> <%= post.userId.lastname %>:</strong> <%= post.title %></p>
     <p><a href="/post/<%= post._id %>">View Post</a></p>
   </div>
   <hr>
