--- a/views/addPlant.ejs
+++ b/views/addPlant.ejs
@@ -2,7 +2,7 @@
 
 
 
-    <div class="container">
+    <div class="container-fluid">
       <h1>Add New Plant</h1>
       <form action="/add-plant" method="POST">
         <div class="form-group">
