--- a/views/clientPlantResult.ejs
+++ b/views/clientPlantResult.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/UserHeader.ejs") %>
 
 
-     <div class="container">
+     <div class="container-fluid">
           <h1>Plant Identification and Disease Detection Result</h1>
 
           <img src="<%= imagePath %>" alt="Uploaded plant image" />
