--- a/views/clientUploadPlant.ejs
+++ b/views/clientUploadPlant.ejs
@@ -3,7 +3,7 @@
 
 
 
-  <div class="container d-flex row hidden-scroll">
+  <div class="container-fluid d-flex row hidden-scroll">
     <div class="upload-container col-lg-8 col-md-12 hidden-scroll">
 
       <% if (error) { %>
