--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
     </nav>
        <!-- Page Content -->
-        <div class="container hidden-scroll" > 
+        <div class="container-fluid hidden-scroll" > 
             <p>Weather</p>
             <div class="bg-primary text-white btn">
                 <p>City: <%= weather.name %></p>
