--- a/views/partials/UserHeader.ejs
+++ b/views/partials/UserHeader.ejs
@@ -23,15 +23,14 @@
         <!-- Sidebar -->
         <div style="background-color: #59A645;" class="border-right" id="sidebar-wrapper">
             <div class="sidebar-heading d-flex justify-content-center">
-                <img src="/images/logo-user.svg" alt="" style="width: 30px;">
-                <strong class="text-white"> PROJECTSEED</strong>
+                <img src="/images/logo-user.svg" alt="" style="width: 40px;">
             </div>
             <div class="list-group list-group-flush d-grid gap-3 mt-4">
-                <a href="/dashboard" class="side-nav-item text-white"> <img src="/images/Dashboard-nav.svg" alt="">  Dashboard</a>
-                <a href="/plant-identification" class="side-nav-item text-white"><img src="/images/scan-helper.svg" alt="">  Plant Scanner</a>
-                <a href="/posts" class="side-nav-item text-white"> <img src="/images/account-group.svg" alt="">  Community</a>
-                <a href="/email" class="side-nav-item text-white"> <img src="/images/email-outline.svg" alt="">  Email</a>
-                <a href="/logout" class="side-nav-item text-white"><img src="/images/logout.svg" alt=""> Logout</a>
+                <a href="/dashboard" class="side-nav-item text-white"><img src="/images/Dashboard-nav.svg" alt=""></a>
+                <a href="/plant-identification" class="side-nav-item text-white"><img src="/images/scan-helper.svg" alt=""></a>
+                <a href="/posts" class="side-nav-item text-white"><img src="/images/account-group.svg" alt=""></a>
+                <a href="/email" class="side-nav-item text-white"><img src="/images/email-outline.svg" alt=""></a>
+                <a href="/logout" class="side-nav-item text-white"><img src="/images/logout.svg" alt=""></a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
