--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,30 @@
 <%- include("partials/UserHeader.ejs") %>
 
-
-    </nav>
        <!-- Page Content -->
         <div class="container-fluid hidden-scroll" > 
-            <p>Weather</p>
-            <div class="bg-primary text-white btn">
-                <p>City: <%= weather.name %></p>
-                <p>Temperature<%= weather.main.temp %></p>
-                <p>Description: <%= weather.weather[0].description, %></p>
+            <h1>ANTOK NA Q</h1>
+
+            <div class="row">
+                <div class="col-8 d-flex p-4">
+                    <div>
+                        <p class="h2">Vinzons, Camarines Norte</p>
+                        <p class="h3"><%= dateToday %></p>
+                        <p class="h2"><%= weather.main.temp %></p>
+                    </div>
+                    <div class="d-flex align-items-center rounded-circle bg-white p-4">
+                        <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="" width="100px" height="100px">
+                    </div>
+                    
+                </div>
+                <div class="col-4 bg-white p-3 rounded">
+                    <p class="h4">Soil Moisture Status</p>
+                    <p class="h3">20%</p>
+                    <p class="h3">Dry</p>
+                </div>
             </div>
-           
+
+
+          
             
             <p class="h5">Plants That Need to Be Watered</p>
             <% if(locals.plant){ %>
