--- a/views/partials/UserHeader.ejs
+++ b/views/partials/UserHeader.ejs
@@ -51,7 +51,7 @@
                 </div>
                 <div class="d-flex align-items-center">
                     <p class="my-0 mx-3"> <%= name  %> </p>
-                    <img src="https://i.pinimg.com/236x/fa/d5/e7/fad5e79954583ad50ccb3f16ee64f66d.jpg" style="width: 50px; border-radius: 50px;" alt="">
+                    <img src="<%= profilePicture %>" style="width: 50px; border-radius: 50px; background-size: cover; " alt="">
                 </div>
             </div>   
 
