--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,81 +1,137 @@
 <%- include("partials/UserHeader.ejs") %>
 
        <!-- Page Content -->
-        <div class="container-fluid hidden-scroll" > 
-            <h1>ANTOK NA Q</h1>
+        <div class="container-fluid hidden-scroll " > 
 
-            <div class="row">
-                <div class="col-8 d-flex p-4">
-                    <div>
-                        <p class="h2">Vinzons, Camarines Norte</p>
-                        <p class="h3"><%= dateToday %></p>
-                        <p class="h2"><%= weather.main.temp %></p>
-                    </div>
-                    <div class="d-flex align-items-center rounded-circle bg-white p-4">
-                        <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="" width="100px" height="100px">
-                    </div>
-                    
-                </div>
-                <div class="col-4 bg-white p-3 rounded">
-                    <p class="h4">Soil Moisture Status</p>
-                    <p class="h3">20%</p>
-                    <p class="h3">Dry</p>
-                </div>
-            </div>
+            <section class="weather-section">
 
-
-          
-            
-            <p class="h5">Plants That Need to Be Watered</p>
-            <% if(locals.plant){ %>
-                <div class="container-water d-flex gap-3">
-                    <% plants.filter(plant => plant.needsWatering).forEach(plant => { %>
-                        <div class="not-watered-plants">
-                            <%= plant.name %>
-                            <form action="/water-plant/<%= plant._id %>" method="POST" style="display: inline">
-                                <button type="submit" class="btn btn-success btn-sm ml-2">Water</button>
-                            </form>
-                            <p style="width: 300px;">Last Watered: <%= plant.lastWatered ? new Date(plant.lastWatered).toLocaleDateString() : 'Not yet watered' %></p>
+                <div class="row nexa-black gap-4 mt-2 d-flex justify-content-center">
+                    <div class="col-lg-7 col-md-12 d-flex gap-3 flex-column">
+                        <div class="col p-4 center-items weather-card b-radius-50 ">
+                            <div>
+                                <div class="d-flex align-items-center">
+                                    <img src="images/location-icon.svg" alt="">
+                                    <p class="h2 fs-30 m-0">Vinzons, Camarines Norte</p>
+                                </div>
+                                <p class="arial fs-14"><strong><%= day %>,</strong>  <%= dateToday %></p>
+                                <p class="fs-80"><%= weather.main.temp %>°</p>
+                            </div>
+                            <div>
+                                <img src="images/weather-icons/<%=weather.weather[0].main %>.svg" alt="" width="150">
+                            </div>
                         </div>
-                    <% }) %>
-                </div>
-            <% }else{ %>
-                <p>Nice, all plants are hydrated.</p>
-            <% } %>
-           
 
-            <a href="/add-plant" class="btn btn-primary mb-3 my-3">Add plant</a>
-            <p class="h5">My Plants</p>
-    
-            <div class="table-responsive">
-                <% if (plants && plants.length > 0) { %>
-                    <table id="plantsTable" class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th>Plant Name</th>
-                                <th>Planting Instructions</th>
-                                <th>Watering Schedule</th>
-                                <th>Estimated Harvest Time</th>
-                                <th>Current Stage</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% plants.forEach(plant => { %>
-                                <tr>
-                                    <td><%= plant.name %></td>
-                                    <td><%= plant.plantingInstructions %></td>
-                                    <td><%= plant.wateringSchedule %></td>
-                                    <td><%= new Date(plant.harvestDate).toLocaleDateString() %></td>
-                                    <td><%= plant.growthStage %></td>
-                                </tr>
-                            <% }) %>
-                        </tbody>
-                    </table>
-                <% } else { %>
-                    <p>No plants found. Start by adding a new plant!</p>
-                <% } %>
-            </div>
-        
+                        <div class="col arial p-4 weather-card b-radius-50">
+                            <div class="p-3">
+                                <h3>5-Day Forecast</h3>
+                            </div>
+                            
+                            <div class="px-2 overflow-x-auto">                
+                                <!-- 5-Day Weather Forecast -->
+                                <div class="forecast-container d-flex justify-content-around">
+                                  <% forecast.forEach(day => { %>
+                                    <div class="forecast-day d-flex justify-content-center flex-column align-items-center">
+                                      <p><%= new Date(day.dt_txt).toLocaleDateString('en-US', { weekday: 'long' }) %></p>
+                                      <img src="https://openweathermap.org/img/wn/<%= day.weather[0].icon %>@2x.png" alt="Weather Icon">
+                                      <p><%= day.main.temp %> °C</p>
+                                    </div>
+                                  <% }) %>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-12 p-4 weather-card b-radius-50 ">
+                        <div class="d-flex align-items-center">
+                            <img src="/images/todo-icon.svg" alt="">
+                            <p class="m-0 gray-text">To do list</p>
+                        </div>
+                        <div class="px-4">
+                            <p>askdjhaksdksajhd</p>
+                            <p>askdjhaksdksajhd</p>
+                            <p>askdjhaksdksajhd</p>
+
+                        </div>
+                      
+                    </div>
+                </div>    
+            </section>
+          
+
+            <section id="my-plants">
+                <div class="row gap-4 mt-2 d-flex justify-content-center">
+                    <div class="col-lg-7 col-md-12 d-flex gap-3 flex-column">
+                        <div class="col p-4 weather-card b-radius-50 ">
+
+                                <p class="h5">Plants That Need to Be Watered</p>
+                                <% if(locals.plant){ %>
+                                    <div class="container-water d-flex gap-3">
+                                        <% plants.filter(plant => plant.needsWatering).forEach(plant => { %>
+                                            <div class="not-watered-plants">
+                                                <%= plant.name %>
+                                                <form action="/water-plant/<%= plant._id %>" method="POST" style="display: inline">
+                                                    <button type="submit" class="btn btn-success btn-sm ml-2">Water</button>
+                                                </form>
+                                                <p style="width: 300px;">Last Watered: <%= plant.lastWatered ? new Date(plant.lastWatered).toLocaleDateString() : 'Not yet watered' %></p>
+                                            </div>
+                                        <% }) %>
+                                    </div>
+                                <% }else{ %>
+                                    <p>Nice, all plants are hydrated.</p>
+                                <% } %>
+                                <a href="/add-plant" class="btn btn-primary ">Add plant</a>
+
+                                <div class="d-flex align-items-center mt-2">
+                                    <img src="/images/my-plants.svg" alt="">
+                                    <p class="h5 m-0">My Plants</p>
+                                </div>
+                                
+
+                            <div class="table-responsive">
+                                <% if (plants && plants.length > 0) { %>
+                                    <table id="plantsTable" class="table table-striped">
+                                        <thead>
+                                            <tr>
+                                                <th>Plant Name</th>
+                                                <th>Planting Instructions</th>
+                                                <th>Watering Schedule</th>
+                                                <th>Estimated Harvest Time</th>
+                                                <th>Current Stage</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <% plants.forEach(plant => { %>
+                                                <tr>
+                                                    <td><%= plant.name %></td>
+                                                    <td><%= plant.plantingInstructions %></td>
+                                                    <td><%= plant.wateringSchedule %></td>
+                                                    <td><%= new Date(plant.harvestDate).toLocaleDateString() %></td>
+                                                    <td><%= plant.growthStage %></td>
+                                                </tr>
+                                            <% }) %>
+                                        </tbody>
+                                    </table>
+                                <% } else { %>
+                                    <p>No plants found. Start by adding a new plant!</p>
+                                <% } %>
+                            </div>
+
+                        </div>
+
+                       
+                    </div>
+
+                    <div class="col-lg-4 col-md-12 p-4 weather-card b-radius-50 ">
+                       
+                        <p>Soil Status</p>
+                      
+                    </div>
+                </div>    
+            </section>
+
+            
+          
+          
         </div>
 </div>
 <!-- /#page-content-wrapper -->
