--- a/views/email.ejs
+++ b/views/email.ejs
@@ -1,7 +1,7 @@
 
 <%- include("partials/UserHeader.ejs") %>  
 
-        <div class="container-fluid p-0 ">
+        <div class="container-fluid ">
             <!-- EMAIL SECTION -->
                 <form class="form-container form-control p-4" action="/send-mail" method="post"> 
                 <% if(locals.emailSent){ %>
