--- a/views/partials/UserFooter.ejs
+++ b/views/partials/UserFooter.ejs
@@ -33,7 +33,7 @@ $(document).ready(function() {
     if (currentPath.includes('/dashboard')) {
         pageTitle.text('DASHBOARD');
     } else if (currentPath.includes('/plant-identification')) {
-        pageTitle.text('PLANT IDENTIFICATION');
+        pageTitle.text('IDENTIFICATION');
     } else if (currentPath.includes('/community')) {
         pageTitle.text('COMMUNITY');
     } else if (currentPath.includes('/email')) {
