--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,9 @@
 
             <section class="weather-section">
 
-                <div class="row nexa-black gap-4 mt-2 d-flex justify-content-center">
-                    <div class="col-lg-7 col-md-12 d-flex gap-3 flex-column">
-                        <div class="col p-4 center-items weather-card b-radius-50 ">
+                <div class="row nexa-black gap-4 d-flex justify-content-center m-2">
+                    <div class="col-lg-7 d-flex gap-3 flex-column ">
+                        <div class="p-4 center-items weather-card b-radius-50 ">
                             <div>
                                 <div class="d-flex align-items-center">
                                     <img src="images/location-icon.svg" alt="">
@@ -21,7 +21,7 @@
                             </div>
                         </div>
 
-                        <div class="col arial p-4 weather-card b-radius-50">
+                        <div class="arial p-4 weather-card b-radius-50">
                             <div class="p-3">
                                 <h3>5-Day Forecast</h3>
                             </div>
@@ -41,7 +41,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-12 p-4 weather-card b-radius-50 ">
+                    <div class="col-lg-4 p-4 weather-card b-radius-50">
                         <div class="d-flex align-items-center">
                             <img src="/images/todo-icon.svg" alt="">
                             <p class="m-0 gray-text">To do list</p>
@@ -59,7 +59,7 @@
           
 
             <section id="my-plants">
-                <div class="row gap-4 mt-2 d-flex justify-content-center">
+                <div class="row gap-4 mt-3 d-flex justify-content-center mx-2">
                     <div class="col-lg-7 col-md-12 d-flex gap-3 flex-column">
                         <div class="col p-4 weather-card b-radius-50 ">
 
