--- a/views/partials/UserHeader.ejs
+++ b/views/partials/UserHeader.ejs
@@ -45,7 +45,7 @@
                         </button>
                     </div>
                     <div class="d-flex align-items-center">
-                        <p id="page-title"  class="h4 m-0 fw-bold" style="font-family: Nexa-Black;">DASHBOARD</p>
+                        <p id="page-title"  class="h4 m-0 fw-bold nexa-black bread-crumbs">DASHBOARD</p>
                     </div>
                     
                 </div>
