--- a/views/partials/LandingPageHeader.ejs
+++ b/views/partials/LandingPageHeader.ejs
@@ -3,11 +3,9 @@
      <head>
           <meta charset="UTF-8" />
           <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-          <meta name="description" content="Excessify by Jelly Bean: Donate excess food to help feed people in need. Join our mission to reduce food waste and support local communities." />
-          <meta property="og:title" content="Excessify by Jelly Bean - Donate Food, Help Communities" />
-          <meta property="og:description" content="Join Excessify by Jelly Bean to help reduce food waste and provide meals for those in need." />
-          <meta property="og:image" content="/images/excessify.png" />
-          <meta property="og:url" content="https://www.yoursite.com" />
+          <meta property="og:title" content="Project Seed by Jelly Ace" />
+          <meta property="og:image" content="/images/logo-nav.svg" />
+          <meta property="og:url" content="https://permaculture-production.up.railway.app/" />
 
           <link rel="icon" href="/images/logo copy.svg" type="image/x-icon" />
 
