--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
                                 <p class="fs-80"><%= weather.main.temp %>°</p>
                             </div>
                             <div>
-                                <img src="images/weather-icons/<%=weather.weather[0].main %>.svg" alt="" width="150">
+                                <img class="weather-icon-lg" src="images/weather-icons/<%=weather.weather[0].main %>.svg" alt="" >
                             </div>
                         </div>
 
@@ -44,7 +44,7 @@
                     <div class="col-lg-4 p-4 weather-card b-radius-50">
                         <div class="d-flex align-items-center">
                             <img src="/images/todo-icon.svg" alt="">
-                            <p class="m-0 gray-text">To do list</p>
+                            <p class="m-0 gray-text todo-text">To do list</p>
                         </div>
                         <div class="px-4">
                             <p>askdjhaksdksajhd</p>
